// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContactFormAutoEmbedPublishSection /> Contact Form - connected to a non-shopify store should render correct section 1`] = `
<div
  class="card disabled"
  data-testid="contact-form-auto-embed-card"
  id="contact-form-auto-embed-card"
>
  <div>
    <h3
      class="title"
    >
      Automatically embed on your website
      <div
        class="badge badge upperCase"
        style="border-radius: 100px;"
      >
        RECOMMENDED
      </div>
    </h3>
    <div>
      Gorgias will automatically embed the contact form on a new or existing page on your website. This method is code-free.
    </div>
  </div>
  <button
    aria-disabled="true"
    class="wrapper fill primary medium isDisabled"
    data-testid="contact-form-auto-embed-card__embed-button"
    type="button"
  >
    <span
      class="content"
    >
      Embed Form
    </span>
  </button>
</div>
`;

exports[`<ContactFormAutoEmbedPublishSection /> Contact Form - connected to a shopify store when update permissions not needed should render correct section 1`] = `
<div
  class="card"
  data-testid="contact-form-auto-embed-card"
  id="contact-form-auto-embed-card"
>
  <div>
    <h3
      class="title"
    >
      Automatically embed on your website
      <div
        class="badge badge upperCase"
        style="border-radius: 100px;"
      >
        RECOMMENDED
      </div>
    </h3>
    <div>
      Gorgias will automatically embed the contact form on a new or existing page on your website. This method is code-free.
    </div>
  </div>
  <button
    aria-disabled="false"
    class="wrapper fill primary medium"
    data-testid="contact-form-auto-embed-card__embed-button"
    type="button"
  >
    <span
      class="content"
    >
      Embed Form
    </span>
  </button>
</div>
`;

exports[`<ContactFormAutoEmbedPublishSection /> Contact Form - connected to a shopify store when update permissions not needed should render correct section when store has embedments already 1`] = `
<div
  class="card clickable"
  data-testid="contact-form-auto-embed-card"
  id="contact-form-auto-embed-card"
>
  <i
    class="material-icons text-success"
    style="font-size: 24px;"
  >
    check_circle
  </i>
  <div>
    <h3
      class="title"
    >
      Automatically embed on your website
    </h3>
    <div>
      Gorgias will automatically embed the contact form on a new or existing page on your website. This method is code-free.
    </div>
  </div>
  <i
    class="material-icons"
  >
    keyboard_arrow_right
  </i>
</div>
`;

exports[`<ContactFormAutoEmbedPublishSection /> Contact Form - not connected to any stores should render correct section 1`] = `
<div
  class="card disabled"
  data-testid="contact-form-auto-embed-card"
  id="contact-form-auto-embed-card"
>
  <div>
    <h3
      class="title"
    >
      Automatically embed on your website
      <div
        class="badge badge upperCase"
        style="border-radius: 100px;"
      >
        RECOMMENDED
      </div>
    </h3>
    <div>
      Gorgias will automatically embed the contact form on a new or existing page on your website. This method is code-free.
    </div>
  </div>
  <button
    aria-disabled="true"
    class="wrapper fill primary medium isDisabled"
    data-testid="contact-form-auto-embed-card__embed-button"
    type="button"
  >
    <span
      class="content"
    >
      Embed Form
    </span>
  </button>
</div>
`;
